<resources>
    <string name="app_name">Roam App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bitmapPreview">图片预览</string>
    <string name="printsuccess">标签打印成功！</string>
    <string name="printfailed">标签打印失败！</string>
    <string name="DzCommon_debuggable">false</string>
    <string name="DzCommon_app_path">志众打印</string>
    <string name="DzCommon_actual_language">SIMPLIFIED_CHINESE</string>
    <string name="DzCommon_language_auto">跟随系统语言</string>
    <string name="DzCommon_language_SIMPLIFIED_CHINESE">简体中文</string>
    <string name="DzCommon_language_TRADITIONAL_CHINESE">繁體中文</string>
    <string name="DzCommon_language_ENGLISH">English</string>
    <string name="not_implemented">近期推出，敬请期待！</string>
    <string name="str_empty" />
    <string name="str_number">1</string>
    <string name="str_close">关闭</string>
    <string name="str_yes">是</string>
    <string name="str_no">否</string>
    <string name="str_ok">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_back">return</string>
    <string name="str_finish">完成</string>
    <string name="str_delete">删除</string>
    <string name="str_download">下载</string>
    <string name="str_enquirement">提示</string>
    <string name="str_information">信息</string>
    <string name="str_save">保存</string>
    <string name="str_notsave">不保存</string>
    <string name="str_thinking">再想想</string>
    <string name="str_search">搜索</string>
    <string name="str_refresh">刷新</string>
    <string name="str_find">查找</string>
    <string name="str_stop">停止</string>
    <string name="str_retry">重试</string>
    <string name="str_new">Demo</string>
    <string name="str_name">名称</string>
    <string name="str_value">取值</string>
    <string name="str_have">有</string>
    <string name="str_none">无</string>
    <string name="str_m">米</string>
    <string name="str_mm">毫米</string>
    <string name="str_day">天</string>
    <string name="str_days">天</string>
    <string name="DzCommon_autoCommit_format">%1$s (%2$ds)</string>
    <string name="DzCommon_pleaseInputSomething">请输入%s</string>
    <string name="DzCommon_unknownError">发生未知错误！</string>
    <string name="DzCommon_uncaughtExceptionMessage">"发生未捕获异常
%1$s
详细信息已经拷贝到剪贴板，请将该信息反馈给您的客户经理！"</string>
    <string name="DzCommon_uncaughtExceptionDetail">"发生未捕获异常
发生时间：%1$s
软件名称：%8$s
软件版本：%5$s
手机型号：%2$s
SDK版本：%3$s
系统版本：%4$s
异常线程：%6$s
异常详情：%7$s"</string>
    <string name="DzCommon_shouldShowRequestPermissionRationale">本操作需要『%1$s』的权限。请进入系统设置=》权限管理，授予本应用该权限，然后重试。</string>
    <string name="DzCommon_requestPermissions">本操作需要『%1$s』的权限。正在向系统动态申请该权限，请稍后重试。</string>
    <string name="DzCommon_readWriteExternalStorage">读写SD卡</string>
    <string name="DzCommon_setTagKey_content">View.setTag(key)</string>
    <string name="DzNetData_user_agent">DothanTechAndroidAPP</string>
    <string name="DzPrinter_support_old_package">false</string>
    <string name="DzPrinter_legacy_printer_names" />
    <string name="DzPrinter_support_super_bitmap">true</string>
    <string name="DzPrinter_auto_bt_disconnect">true</string>
    <string name="dzview_update_apk_name">JCDY</string>
    <string name="dzview_prefer_iosstyle">Yes</string>
    <string name="dzview_translucent_statusbar">Yes</string>
    <string name="dzview_translucent_navigationbar">Triple</string>
    <string name="dzview_show_busy_delay">1200</string>
    <string name="dzview_back_quit_toast">再按一次退出程序</string>
    <string name="dzview_str_download_new">下载新版本</string>
    <string name="dzview_str_cancel_check">取消检查</string>
    <string name="dzview_str_cancel_download">取消下载</string>
    <string name="dzview_title_check_update">检查新版本</string>
    <string name="dzview_msg_not_open_network">没有可用的网络！</string>
    <string name="dzview_msg_client_need_upgrade">需要升级APP！</string>
    <string name="dzview_msg_check_update">正在检查新版本，请稍候 …</string>
    <string name="dzview_msg_no_wifi_info">注意：当前网络不是WiFi，下载新版本会耗费流量。</string>
    <string name="dzview_msg_no_update">当前版本已是最新版本！</string>
    <string name="dzview_msg_update_info">"发现新版本 %1$s。
是否下载并更新？"</string>
    <string name="dzview_msg_downloading">正在下载新版本，请稍候 …</string>
    <string name="dzview_msg_error_requesthttp">网络请求失败！请稍后重试。</string>
    <string name="dzview_start_download_title">下载新版本</string>
    <string name="dzview_setTagKey_itemBase">View.setTag(key)</string>
    <string name="str_connecting">正在连接...</string>
    <string name="str_print">打印</string>
    <string name="str_printer">打印机</string>
    <string name="printer_not_connected">Printer not connected</string>
    <string name="dzp_label_name">标签名称</string>
    <string name="dzp_label_width">标签宽度</string>
    <string name="dzp_label_height">标签高度</string>
    <string name="dzp_print_direction">打印方向</string>
    <string name="dzp_label_gaptype">纸张类型</string>
    <string name="dzp_label_gaplength">间隔长度</string>
    <string name="printer_type_thermal_transfer">热转印标签打印机</string>
    <string name="printer_type_thermal_sensitive">热敏标签打印机</string>
    <string name="printer_type_otp_writer">耗材烧写器</string>
    <string name="printer_type_other_device">其他设备</string>
    <string name="dzp_progress_info_enabling">正在启用蓝牙 …</string>
    <string name="dzp_progress_info_enabled">蓝牙启用成功</string>
    <string name="dzp_progress_info_disabled">蓝牙被关闭</string>
    <string name="dzp_progress_info_bonding">正在配对蓝牙打印机 …</string>
    <string name="dzp_progress_info_bonded">蓝牙打印机配对成功</string>
    <string name="dzp_progress_info_unbonded">蓝牙打印机配对被取消</string>
    <string name="dzp_printer_state_connecting">正在连接打印机 …</string>
    <string name="dzp_printer_state_connected">打印机已连接</string>
    <string name="dzp_printer_state_disconnected">打印机已断开</string>
    <string name="dzp_printer_state_conn_failed">连接打印机失败</string>
    <string name="title_printer_list">打印机列表</string>
    <string name="title_printer_connected">当前连接的打印机</string>
    <string name="title_printer_history">连接过的打印机</string>
    <string name="title_printer_bonded">已配对的打印机</string>
    <string name="title_printer_searched">未配对的打印机</string>
    <string name="item_printer_name">设备名称：</string>
    <string name="item_connect_time">连接时间：</string>
    <string name="item_printer_type">设备类型：</string>
    <string name="item_printer_address">设备地址：</string>
    <string name="item_printer_softversion">软件版本：</string>
    <string name="item_printer_hardversion">硬件版本：</string>
    <string name="toast_discovery_started">正在搜索打印机，请稍候 …</string>
    <string name="toast_discovery_stoped">搜索结束，搜索到 %1$d 个新的打印机</string>
    <string name="print_printNumber">打印页数</string>
    <string name="print_printCopies">打印份数</string>
    <string name="print_printDarkness">打印浓度</string>
    <string name="print_printSpeed">打印速度</string>
    <string name="print_collateCopies">自动分页</string>
    <string name="print_collateCopies_on">1,2,3; 1,2,3</string>
    <string name="print_collateCopies_off">1,1; 2,2; 3,3</string>
    <string name="print_directions">0°;90°;180°;270°</string>
    <string name="title_print_state_monitor">正在打印</string>
    <string name="title_print_state_success">打印成功</string>
    <string name="title_print_state_failed">打印失败</string>
    <string name="button_cancel_print">取消打印</string>
    <string name="button_background_print">后台打印</string>
    <string name="message_printer_notconnected">没有连接打印机！</string>
    <string name="message_printer_connecting">正在连接打印机 …</string>
    <string name="message_printer_reconnecting">正在重新连接打印机 …</string>
    <string name="message_printer_connected">打印机连接成功</string>
    <string name="message_print_startcopy">正在打印 %1$d / %2$d 页 …</string>
    <string name="message_print_copysuccess">第 %1$d / %2$d 页打印结束</string>
    <string name="message_print_success">%1$d 页标签打印成功。</string>
    <string name="message_printer_connect_success">连接打印机成功，开始打印 …</string>
    <string name="message_printer_connect_failed">连接打印机失败，请检查打印机！</string>
    <string name="message_printer_connect_timeout">连接打印机超时，请检查打印机！</string>
    <string name="message_print_failed_general">打印失败，请检查打印机！</string>
    <string name="message_print_failed_no_paper">打印机缺纸</string>
    <string name="message_print_failed_cover_opened">纸仓盒盖被打开</string>
    <string name="message_print_failed_tph_opened">打印头未锁紧</string>
    <string name="message_print_failed_no_ribbon">未检测到碳带</string>
    <string name="message_print_failed_unmatched_ribbon">不匹配的碳带</string>
    <string name="message_print_failed_usedup_ribbon">用完的碳带</string>
    <string name="message_print_failed_usedup_ribbon2">用完的色带</string>
    <string name="message_print_failed_isprinting">正在打印，请稍后重试 …</string>
    <string name="message_print_failed_isrotating">正在走纸，请稍后重试 …</string>
    <string name="message_print_failed_voltoolow">打印电压过低</string>
    <string name="message_print_failed_voltoohigh">打印电压过高</string>
    <string name="message_print_failed_tphnotfound">未检测到打印头</string>
    <string name="message_print_failed_tphtoohot">打印头温度过高</string>
    <string name="message_print_failed_tphtoocold">环境温度过低</string>
    <string name="print_param_default">随打印机设置</string>
    <string name="print_param_default_s">默认</string>
    <string name="DzLabelEditor_base_directory" />
    <string name="DzLabelEditor_empty_text_hint">请输入文本内容</string>
    <string name="DzLabelEditor_empty_barcode_hint">1234567890</string>
    <string name="DzLabelEditor_empty_barcode_value">42545F46585876312E30350D</string>
    <string name="DzLabelEditor_min_bar_dots">2</string>
    <string name="DzLabelEditor_length_range_hint" formatted="false">范围：%d～%d，单位：毫米</string>
    <string name="DzLabelEditor_length_range_hint_f" formatted="false">范围：%f～%f，单位：毫米</string>
    <string name="DzLabelEditor_horAlignment_prop_name">水平对齐</string>
    <string name="DzLabelEditor_horAlignment_values">居左;居中;居右;拉伸</string>
    <string name="DzLabelEditor_verAlignment_prop_name">垂直对齐</string>
    <string name="DzLabelEditor_verAlignment_values">居上;居中;居下;拉伸</string>
    <string name="DzLabelEditor_propHeaderHint_font">字体</string>
    <string name="DzLabelEditor_fontName_prop_name">字体名称</string>
    <string name="DzLabelEditor_fontSize_prop_name">字体大小</string>
    <string name="DzLabelEditor_fontBold_prop_name">粗体</string>
    <string name="DzLabelEditor_fontItalic_prop_name">斜体</string>
    <string name="DzLabelEditor_fontUnderline_prop_name">下划线</string>
    <string name="DzLabelEditor_fontStrikeout_prop_name">删除线</string>
    <string name="DzLabelEditor_font_pound_5_0">八号</string>
    <string name="DzLabelEditor_font_pound_5_5">七号</string>
    <string name="DzLabelEditor_font_pound_6_5">小六</string>
    <string name="DzLabelEditor_font_pound_7_5">六号</string>
    <string name="main_func_newlabel">新建标签</string>
    <string name="main_func_print">打印</string>
    <string name="main_func_labels">标签模板</string>
    <string name="tool_action_new">新建</string>
    <string name="tool_action_text">文本</string>
    <string name="tool_action_barcode">一维码</string>
    <string name="tool_action_qrcode">二维码</string>
    <string name="tool_action_image">图片</string>
    <string name="tool_action_line">线条</string>
    <string name="tool_action_rectangle">矩形</string>
    <string name="tool_action_table">表格</string>
    <string name="msg_btunconnect_str">未连接</string>
</resources>